# llm-manager-desktop

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: LlmManager.h  MainWidget.cpp  MainWidget.h  OllamaAPI.cpp  OllamaAPI.h  main.cpp
